# pix-warehouse-system

./: README.md  pyproject.toml
app/: docker-compose.yml  main.py  new_tables_er.txt
app/bank/: account_balances.py
app/data/pix_movements/: .~lock.part-00000-tid-8322739320471544484-12382b61-f87b-4388-931d-ec1681d2aad1-10545794-1-c000.csv#
app/database/: connection.py  dtos.py  queries.py  schema.py  schema_evolution.py  update_dtos.py
app/mock/: mock.py
app/tests/: test_database.py  test_database_queries.py
app/transform/: transform.py
app/views/: dtos.py  materialized_views.py  transactions_views.py
